Refactor code towards Java 21